[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Enemies/Scripts and Scenes/Hitboxes.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemies/Scripts and Scenes/Mino/MinoAnimationTree.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/Scripts and Scenes/Mino/MinoAnimationPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Enemies/Scripts and Scenes/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemies/Mino.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Enemies/Scripts and Scenes/WanderController.tscn" type="PackedScene" id=6]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 85.657

[sub_resource type="CapsuleShape2D" id=3]
height = 5.04671

[node name="Mino" type="KinematicBody2D" groups=[
"Enemies",
]]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 9
script = ExtResource( 5 )

[node name="MinoAnimationPlayer" parent="." instance=ExtResource( 3 )]

[node name="MinoAnimationTree" parent="." instance=ExtResource( 2 )]
anim_player = NodePath("../MinoAnimationPlayer")
active = true
parameters/playback = SubResource( 1 )
parameters/AttackSwing/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )

[node name="WanderController" parent="." instance=ExtResource( 6 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.0470588, 0.992157, 0.0627451, 0.12549 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.380875, -14.1199 )
shape = SubResource( 3 )

[node name="Name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.4645
margin_top = -38.4662
margin_right = 23.5355
margin_bottom = -24.4662
text = "Mino"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hitboxes" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 1 )

[node name="CollisionShape2D" parent="Hitboxes/Area2D" index="0"]
modulate = Color( 1, 0, 0, 0.807843 )

[node name="CollisionPolygon2D" parent="Hitboxes/Area2D" index="1"]
modulate = Color( 0.937255, 0.0313726, 0.0313726, 0.317647 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="PlayerDetectionZone"]
[editable path="Hitboxes"]
